--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 
-<title>P&R_10</title>
+<title>Fanpage de Cachorrinhos</title>
 
 <meta charset=“utf-8”>
 
@@ -12,10 +12,10 @@
 
 <body>
 
-<h1>ProjetoGit_1</h1>
+<h1>Perfil #dogsoninstagram</h1>
+
+<img src=“imagens/cachorro2.jpg” />
 
 </body>
 
 </html>
-
-Copied!
